[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/blocks/BaseBlock.gd" id="1_1"]

[node name="BaseBlock" type="Control"]
clip_contents = true
script = ExtResource("1_1")
size_flags_horizontal = 1
size_flags_vertical = 1
custom_minimum_size = Vector2(180, 60)

[node name="Background" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
modulate = Color(1, 1, 1, 1)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 0
axis_stretch_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
text = "Block"
size_flags_horizontal = 3
add_theme_color_override("font_color", Color(0.1, 0.1, 0.1, 1))
add_theme_font_size_override("font_size", 20)

[node name="SummaryLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
visible = false
text = "Summary"
wrap_mode = 2
size_flags_horizontal = 3
add_theme_color_override("font_color", Color(0.15, 0.15, 0.15, 0.9))
add_theme_font_size_override("font_size", 12)

[node name="SlotContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 12)
